fix nav on mobile

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -86,7 +86,6 @@ body{
     right: 0;
     z-index: 2;
     background-color: rgba(0,0,0, 0.9);
-    padding: 3em;
     text-align: center;
     overflow-x: auto;
     overflow: hidden;
@@ -98,6 +97,7 @@ body{
 
     > .navbar-text{
       color: #fff;
+      padding: $spacer-y $spacer-x * 3;
     }
   }
 }
